<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">ICD 编码系统</string>

	<string name="home">主页</string>
	<string name="quick_search_301">快捷查询-301</string>
    <string name="quick_search_bj">快捷查询-北京</string>
    <string name="quick_search_wsb">快捷查询-卫生部</string>
	<string name="download">数据库更新</string>

	<string name="introduction">Internatioal Classification of Diseases</string>



	<string name="help_link"><u>如何进行ICD编码</u></string>

	<string name="help_link_tip">如何进行ICD编码</string>


	<string name="help_page_1">1. <u>Select the appropriate section (1 to 4) to work with.</u></string>

	<string name="help_page_2">2. <u>Using the keyword to find the diagnosis term based on the patient detail.</u></string>

	<string name="help_page_3">3. Choose the ICD-10 code(s) from the selected line.</string>

	<string name="help1">3. Choose the ICD-10 code(s) from the selected line.</string>

	<string name="help_main_1">1. <u>Help for the APN ICD-10 Simplified coding</u></string>
	<string name="help_main_2">2. <u>Help for the APP</u></string>

	<string name="newversion"><u>A New Version Released!</u></string>
	<string name="curversion"><u>该版本为最新版本！</u></string>
	<string name="dont_close">下载过程中请不要关闭该界面。</string>
	<string name="begUpdate">开始下载</string>
	<string name="onlineUpdate">在线更新</string>
	<string name="FinishDownload">下载完成</string>
	<string name="updated">已更新</string>
	<string name="errorDownload">下载失败</string>
	<string name="check">核对</string>

	<string name="btn_start"><u>开始</u></string>
	<string name="btn_back"><u>BACK</u></string>
</resources>
