<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp" 
        android:paddingTop="10dp"
        android:layout_marginBottom="20dp"

        >

        <cn.edu.tsinghua.sicd.view.CircleImageView

            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"


            android:src="@drawable/app_logo_who"
            android:background="@color/white"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/profile_image"
            android:gravity="center_vertical"
            android:paddingLeft="10.0dip"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20.0sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_margin="5dp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
    android:layout_width="match_parent"
    android:layout_height="2.0dip"
    android:background="@drawable/biz_pc_account_line" />

    <TextView
        android:id="@+id/tvQuickSearch301"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/quick_search_301"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@drawable/biz_pc_account_line" />

    <TextView
        android:id="@+id/tvQuickSearchBj"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/quick_search_bj"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@drawable/biz_pc_account_line" />

    <TextView
        android:id="@+id/tvQuickSearchWsb"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/quick_search_wsb"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@drawable/biz_pc_account_line" />

    <TextView
        android:id="@+id/tvCheck"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@drawable/biz_pc_account_line" />
    <TextView
         android:id="@+id/tvMySettings"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="Settings"
        android:textColor="@color/white"
        android:textSize="16.0sp" android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@drawable/biz_pc_account_line" android:visibility="gone" />




    <TextView
        android:id="@+id/tvMyUpdate"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/download"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@drawable/biz_pc_account_line"  />


</LinearLayout>